# mushin

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml
.github/actions/arrayfire/: action.yml
.github/workflows/: CI.yml  ci.yml  sec.yml
example/: Cargo.toml
example/src/: main.rs
examples/mnist/: main.rs
gamma/: Cargo.toml
gamma/src/: activations.rs  lib.rs
gamma/src/layers/: dense.rs  mod.rs
gamma_derive/: Cargo.toml
gamma_derive/src/: lib.rs
mushin/: Cargo.toml
mushin/src/: activations.rs  lib.rs  losses.rs
mushin/src/layers/: dense.rs
mushin_derive/: Cargo.toml
src/: gen.rs  gradient.rs  lib.rs  ops.rs  tensor.rs
src/context/: function.rs  mod.rs  storage.rs  tape.rs
src/graph/: mod.rs  node.rs  tape.rs
src/nn/: activations.rs  losses.rs  mod.rs  ops.rs  optimizers.rs
src/nn/layers/: conv2d.rs  dropout.rs  linear.rs  mod.rs
src/tensor/: constant.rs  mod.rs  params.rs  traits.rs  variable.rs
