[package]
name = "mushin"
version = "0.5.0"
authors = ["Aitor Ruano <codearm@pm.me>"]
edition = "2021"
description = "Computational graphs with reverse automatic differentation in the GPU"
homepage = "https://github.com/c0dearm/mushin"
repository = "https://github.com/c0dearm/mushin"
readme = "README.md"
keywords = ["machine-learning", "automatic", "differentiation", "gpu", "cpu"]
categories = ["algorithms", "mathematics", "science"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "c0dearm/mushin" }

[features]
default = ["nn"]
nn = []

[dependencies]
arrayfire = "3.8"
