[package]
name = "example"
version = "0.1.0"
authors = ["Aitor Ruano <codearm@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamma = { path = "../gamma" }
gamma_derive = { path = "../gamma_derive" }
rand = "0.8"