[package]
name = "mushin"
version = "0.1.1"
authors = ["Aitor Ruano <codearm@pm.me>"]
edition = "2018"
description = "Compile-time creation of neural networks"
homepage = "https://github.com/c0dearm/mushin"
repository = "https://github.com/c0dearm/mushin"
readme = "../README.md"
keywords = ["neural", "network", "artificial", "intelligence", "AI"]
categories = ["algorithms", "no-std", "mathematics"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "c0dearm/mushin" }

[dependencies]
rand = "0.8"

[dev-dependencies]
mushin_derive = { path = "../mushin_derive" }
rand_chacha = "0.3"
approx = "0.4"